--- a/pyCORE/src/mews/core/pycore.conf
+++ b/pyCORE/src/mews/core/pycore.conf
@@ -1,7 +1,5 @@
 # This should be generated to match parameters for the node
-[general]
-nodename = testnodesuperlong
-
-[server]
+# Note, only one section is used, 'config', and it is required.
+[config]
 host = 127.0.0.1
 port = 32518
