--- a/pyCORE/src/mews/core/pycore.conf
+++ b/pyCORE/src/mews/core/pycore.conf
@@ -1,5 +1,7 @@
-# This should be generated to match parameters for the node
-# Note, only one section is used, 'config', and it is required.
-[config]
+# pyCORE system configuration
+[ServiceManager]
 host = localhost
 port = 32518
+
+[ListenerThread]
+receive_buffer = 128
