work in progress

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -9,6 +9,7 @@ general:
 paths:
   # package paths for the emews system
   emews_pkg_path: emews
+  emews_base_pkg_path: emews.base
   emews_pkg_services_path: emews.services
   emews_pkg_service_decorators_path: emews.services.decorators
   emews_pkg_samplers_path: emews.common.samplers
