-removed BaseDispatcher as it was only being used by thread_dispatcher (and the callbacks werent working anyways) -client/clientsession works again -logging now uses threadName properly - removed ThreadAdapter, as it's not needed. - removed context support, as it's not needed (threadName is a built in field for logging, and updates itself based on the threading.Thread passed in name) -misc commenting updates, log entry updates

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -24,7 +24,7 @@ logging:
     version: 1
     formatters:
       default:
-        format: '[%(asctime)s] %(nodename)-12.12s | %(threadname)-12.12s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s'
+        format: '[%(asctime)s] %(nodename)-12.12s | %(threadName)-16.16s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s'
     handlers:
       console:
         class: logging.StreamHandler
