--- a/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
+++ b/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
@@ -21,8 +21,8 @@ dependencies:  # additional classes that this service requires
     class: UniformSampler
     module: emews.samplers.uniformsampler
     config:
-      lower_bound: 1
-      upper_bound: 2  # should match the list size of start_sites
+      lower_bound: 0
+      upper_bound: 1  # should match the list size of start_sites -1 (index starts at zero)
   num_links_sampler:  # sampler used to pick the number of links to crawl.  Dependent on first link
       class: TruncnormSampler
       module: emews.samplers.truncnormsampler
