--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -19,7 +19,7 @@ listener:
   command_delimiter: ' '  # delimit commands using this
 
 logging:
-  main_logger: emews.distributed  # the primary logger to use
+  main_logger: emews.base  # the primary logger to use
   log_conf:
     version: 1
     formatters:
@@ -31,12 +31,11 @@ logging:
         formatter: default
         level: DEBUG
         stream: 'ext://sys.stdout'
-      handlers:
-        network:
-          class: logging.handlers.SocketHandler
-          host: localhost
-          port: 32519
-          level: DEBUG
+      network:
+        class: logging.handlers.SocketHandler
+        host: localhost
+        port: 32519
+        level: DEBUG
     loggers:
       root:
         handlers:
@@ -44,11 +43,11 @@ logging:
         level: DEBUG
       emews.base:
         handlers:
-        - network
+        - console
         level: DEBUG  # change this to INFO for production
       emews.distributed:
         handlers:
-        - console
+        - network
         level: DEBUG  # change this to INFO for production
 
 logserver:
