- distributed logging works, tested with multiple daemons running. - logging is now disabled until the LogServer starts (or until right before the connection manager is started)

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -44,10 +44,12 @@ logging:
         handlers:
         - console
         level: DEBUG  # change this to INFO for production
+        propagate: False
       emews.distributed:
         handlers:
         - network
         level: DEBUG  # change this to INFO for production
+        propagate: False
 
 logserver:  # configuration for the node which acts as the LogServer
   node:  absolutefunk-UX32A  # must match the node name of the node running the LogServer
