- implemented delayed service starting - ThreadDispatcher now supports delayed thread dispatching, using a Timer.

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -1,6 +1,9 @@
 # Base configuration for the emews system
 # Note, some of the settings can break the system if changed.
 # YAML 1.2 compliant
+general:
+  # Delay to start services from emews daemon invocation.
+  service_start_delay: 30  # in seconds
 
 paths:
   # package paths for the emews system
