--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -1,6 +1,5 @@
 # Configuration file for AutoSSH
 # YAML 1.2 compliant
-
 config:  # service configuration
   server:
     host: 10.176.149.20
@@ -8,21 +7,42 @@ config:  # service configuration
     username: coreuser
     password: P28c7RtO0
   command:
-    command_count: 5  #how many commands to execute from the list
     command_list:
     - uptime
     - ps aux
     - df -m
+    - uptime
     - pwd
     - ls -al
+    - pwd
+    - ps aux
+    - uname -a
+    - free
+    - free
+    - pwd
+    - uptime
+    - ps aux
+    - ls -l
+    - ps aux
+  command_sampler:
+    std_deviation: 1.0
 
 dependencies:  # additional classes that this service requires
-  command_sampler: # unique name to describe the dependency
-    class: UniformSampler  # distribution to sample commands from
+  num_commands_sampler:  # number of commands to execute in an SSH session.
+    class: TruncnormSampler
+    module: emews.samplers.truncnormsampler
+    config:
+      upper_bound: 15  # len(command.command_list) - 1
+      sigma: 2.0  # std deviation
+  command_sampler:  # the next command to execute
+    class: TruncnormSampler
+    module: emews.samplers.truncnormsampler
+  command_delay_sampler:  # delay to execute next command
+    class: UniformSampler
     module: emews.samplers.uniformsampler
     config:
-      lower_bound: 1  # lower bound (sec)
-      upper_bound: 5  # upper bound (sec)
+      lower_bound: 1  # lower bound (sec) - a_2
+      upper_bound: 5  # upper bound (sec) - b_2
 
 decorators:  # any decorators required need to be defined here
   LoopedService:  # LoopedService decorator
@@ -31,5 +51,5 @@ decorators:  # any decorators required need to be defined here
         class: UniformSampler  # distribution to sample service loop start time from
         module: emews.samplers.uniformsampler
         config:
-          lower_bound: 3  # lower bound (sec)
-          upper_bound: 6  # upper bound (sec)
+          lower_bound: 8  # lower bound (sec) - a_1
+          upper_bound: 20  # upper bound (sec) - b_1
