--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -2,10 +2,10 @@
 # YAML 1.2 compliant
 config:  # service configuration
   server:
-    host: 10.176.149.20
-    port: 2252
+    host: 10.0.0.10
+    port: 22
     username: coreuser
-    password: P28c7RtO0
+    password: Mikesolo7!
   command:
     command_list:
     - uptime
@@ -42,7 +42,7 @@ dependencies:  # additional classes that this service requires
     module: emews.samplers.uniformsampler
     config:
       lower_bound: 1  # lower bound (sec) - a_2
-      upper_bound: 5  # upper bound (sec) - b_2
+      upper_bound: 3  # upper bound (sec) - b_2
 
 decorators:  # any decorators required need to be defined here
   LoopedService:  # LoopedService decorator
@@ -51,5 +51,5 @@ decorators:  # any decorators required need to be defined here
         class: UniformSampler  # distribution to sample service loop start time from
         module: emews.samplers.uniformsampler
         config:
-          lower_bound: 8  # lower bound (sec) - a_1
-          upper_bound: 20  # upper bound (sec) - b_1
+          lower_bound: 1  # lower bound (sec) - a_1
+          upper_bound: 3  # upper bound (sec) - b_1
