--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -4,6 +4,11 @@
 general:
   # Delay to start services from emews daemon invocation.
   service_start_delay: 45  # in seconds
+  # Delay to start client connection to eMews daemon.
+  client_start_delay:
+    config:
+      lower_bound: 6
+      upper_bound: 12
 
 paths:
   # package paths for the emews system
@@ -19,7 +24,7 @@ listener:  # emews client listener (emews clients also use this for their own co
     port: 32518      # port to use
     receive_buffer: 128     # buffer for incoming characters from a emews client
     command_delimiter: ' '  # delimit commands using this
-    recv_timeout: 10  # in seconds - wait this long for a timeout in expected response
+    recv_timeout: 20  # in seconds - wait this long for a timeout in expected response
 
 logging:
   main_logger: emews.distributed  # the primary logger to use
@@ -36,9 +41,15 @@ logging:
         stream: 'ext://sys.stdout'
       network:
         class: logging.handlers.SocketHandler
-        host: localhost  # host or IP to send log entries to
+        host: 10.0.0.21  # host or IP to send log entries to
         port: 32519  # port on destination host to send log entries to
         level: DEBUG
+      file:
+        class: logging.FileHandler
+        filename: emews_log.txt
+        mode: a
+        delay: True
+        formatter: default
     loggers:
       root:
         handlers:
@@ -54,11 +65,16 @@ logging:
         - network
         level: DEBUG  # change this to INFO for production
         propagate: False
+      emews.file:
+        handlers:
+        - file
+        level: DEBUG
+        propagate: False
 
 logserver:  # configuration for the node which acts as the LogServer
-  node:  absolutefunk-UX32A  # must match the node name of the node running the LogServer
-  destination_logger: emews.base  # the logger to handle received log entries
+  node:  n1  # must match the node name of the node running the LogServer
+  destination_logger: emews.file  # the logger to handle received log entries
   listener:
     config:
-      host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
+      host: 10.0.0.21  # host to bind to (should be localhost or 127.0.0.1, etc)
       port: 32519  # port to use (should match port under logging-->log_conf-->handler-->network)
