- Changed BaseService to clone config instead of extract_with_key only, so sys_config is still available without having to use base_config. - ThreadDispatcher now incorporates a timeout on thread join for shutdown.  Allows eMews to terminate even if some running threads refuse to - WrappedThreads are daemon threads by default now.  This way they will shut down if MainThread dies.  Can be changed in __init__(daemon=False) - Added timeout for log server join on shutdown.

--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -3,12 +3,14 @@
 # YAML 1.2 compliant
 general:
   # Delay to start services from emews daemon invocation.
-  service_start_delay: 110  # in seconds
+  service_start_delay: 30  # in seconds
+  # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
+  thread_shutdown_wait: 3  # in seconds (-1 = disable)
   # Delay to start client connection to eMews daemon.
   client_start_delay:
     config:
-      lower_bound: 20
-      upper_bound: 90
+      lower_bound: 5
+      upper_bound: 10
 
 paths:
   # package paths for the emews system
@@ -41,7 +43,7 @@ logging:
         stream: 'ext://sys.stdout'
       network:
         class: logging.handlers.SocketHandler
-        host: 10.0.0.21  # host or IP to send log entries to
+        host: localhost  # host or IP to send log entries to
         port: 32519  # port on destination host to send log entries to
         level: DEBUG
       file:
@@ -72,9 +74,11 @@ logging:
         propagate: False
 
 logserver:  # configuration for the node which acts as the LogServer
-  node:  n1  # must match the node name of the node running the LogServer
-  destination_logger: emews.file  # the logger to handle received log entries
+  node:  absolutefunk-UX32A  # must match the node name of the node running the LogServer
+  destination_logger: emews.base  # the logger to handle received log entries
+  # Delay to wait for 'graceful' log server shut down.  After this wait, continue shut down.
+  shutdown_wait: 1  # in seconds (-1 = disable)
   listener:
     config:
-      host: 10.0.0.21  # host to bind to (should be localhost or 127.0.0.1, etc)
+      host: localhost  # host to bind to
       port: 32519  # port to use (should match port under logging-->log_conf-->handler-->network)
