- config / coreservices updates to be compatible with lab server (note, when the same python services are on both the CORE distributed daemon and local master daemon, distributed daemon (what the node is assigned to) is used, but if the service isn't loaded there, it defaults to the local version)

--- a/pyCORE/src/emews/services/autossh/autossh-2.yml
+++ b/pyCORE/src/emews/services/autossh/autossh-2.yml
@@ -5,7 +5,7 @@ config:  # service configuration
     host: 10.0.17.10
     port: 22
     username: coreuser
-    password: Mikesolo7!
+    password: P28c7RtO0
   command:
     command_list:
     - uptime
