--- a/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
+++ b/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
@@ -8,20 +8,20 @@ config:  # service configuration
     - java
     - none
     start_sites: # site address to start crawling from
-    - 'http://10.0.14.10'  # exp 1
-    - 'http://10.0.0.11'
-    - 'http://10.0.19.10'
-    - 'http://10.0.19.11'
-    - 'http://10.0.17.10'
-    - 'http://10.0.24.10'
-    - 'http://10.0.24.11'
-    - 'http://10.0.24.12'
-    - 'http://10.0.27.11'  # exp 2
-    - 'http://10.0.42.10'
-    - 'http://10.0.46.10'
-    - 'http://10.0.46.11'
-    - 'http://10.0.48.10'
-    - 'http://10.0.52.10'
+    - 'https://10.0.14.10'  # exp 1
+    - 'https://10.0.0.11'
+    - 'https://10.0.19.10'
+    - 'https://10.0.19.11'
+    - 'https://10.0.17.10'
+    - 'https://10.0.24.10'
+    - 'https://10.0.24.11'
+    - 'https://10.0.24.12'
+    - 'https://10.0.27.11'  # exp 2
+    - 'https://10.0.42.10'
+    - 'https://10.0.46.10'
+    - 'https://10.0.46.11'
+    - 'https://10.0.48.10'
+    - 'https://10.0.52.10'
     - 'http://10.0.52.11'
     - 'http://10.0.52.12'
     - 'http://10.0.75.10'  # exp 3
@@ -39,7 +39,7 @@ config:  # service configuration
     std_deviation_first: 16.0  # std deviation of picking next link around mu (first iteration)
     std_deviation: 1.0  # std deviation of picking next link around mu (> first iteration)
   num_links_sampler:
-    std_deviation: 2.0
+    std_deviation: 3.0
 
 dependencies:  # additional classes that this service requires
   site_sampler:  # sampler used to pick the site to crawl
@@ -59,7 +59,7 @@ dependencies:  # additional classes that this service requires
     module: emews.samplers.uniformsampler
     config:
       lower_bound: 2  # lower bound (sec) - a_4
-      upper_bound: 10  # upper bound (sec) - b_4
+      upper_bound: 28  # upper bound (sec) - b_4
 
 decorators:  # any decorators required need to be defined here
   LoopedService:  # LoopedService decorator
@@ -68,5 +68,5 @@ decorators:  # any decorators required need to be defined here
         class: UniformSampler  # distribution to sample service loop start time from
         module: emews.samplers.uniformsampler
         config:
-          lower_bound: 5  # lower bound (sec) - a_3
-          upper_bound: 16  # upper bound (sec) - b_3
+          lower_bound: 8  # lower bound (sec) - a_3
+          upper_bound: 64  # upper bound (sec) - b_3
