- updated decorators and iService contract to work with multiple decorators (contract incorrect before) - updated config method contract for services/service decorators to be more consistent.  No more base_config (config is not redefined). Services now have service_config (part of iService).  Decorators now have decorator_config.

--- a/pyCORE/src/emews/services/autossh/autossh.yml
+++ b/pyCORE/src/emews/services/autossh/autossh.yml
@@ -45,7 +45,7 @@ dependencies:  # additional classes that this service requires
       upper_bound: 48  # upper bound (sec) - b_2
 
 decorators:  # any decorators required need to be defined here
-  NoRaiseService:  # LoopedService decorator
+  NoRaiseService: {} # LoopedService decorator
   LoopedService:  # LoopedService decorator
     dependencies:  # additional classes that this decorator requires
       loop_sampler: # unique name to describe the dependency
