--- a/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
+++ b/pyCORE/src/emews/services/sitecrawler/sitecrawler.yml
@@ -25,28 +25,31 @@ config:  # service configuration
     - 'https://10.0.79.11'
     - 'https://10.0.79.12'
   link_sampler:  # parameters for the link_sampler
-    std_deviation_first: 7.0  # std deviation of picking next link around mu (first iteration)
-    std_deviation: 1.8  # std deviation of picking next link around mu (> first iteration)
-  num_links_sampler:
-    std_deviation: 5.0
+    sigma_next: 1.8  # std deviation of picking next link around mu (> first iteration)
 
 dependencies:  # additional classes that this service requires
   site_sampler:  # sampler used to pick the site to crawl
     class: UniformSampler
     module: emews.samplers.uniformsampler
-    config:
+    parameters:
       lower_bound: 0  # index 0
       upper_bound: 15  # should match the list size of start_sites -1 (index starts at zero)
   num_links_sampler:  # sampler used to pick the number of links to crawl.  Dependent on first link
-      class: TruncnormSampler
-      module: emews.samplers.truncnormsampler
+    class: TruncnormSampler
+    module: emews.samplers.truncnormsampler
+    parameters:
+      upper_bound: null
+      sigma: 5.0
   link_sampler:  # sampler used to pick the next link in a crawl
     class: TruncnormSampler
     module: emews.samplers.truncnormsampler
+    parameters:
+      upper_bound: null
+      sigma: 7.0
   link_delay_sampler:  # sampler used to determine delay in crawling to next link
     class: UniformSampler
     module: emews.samplers.uniformsampler
-    config:
+    parameters:
       lower_bound: 2  # lower bound (sec) - a_4
       upper_bound: 56  # upper bound (sec) - b_4
 
@@ -56,6 +59,6 @@ decorators:  # any decorators required need to be defined here
       loop_sampler: # unique name to describe the dependency
         class: UniformSampler  # distribution to sample service loop start time from
         module: emews.samplers.uniformsampler
-        config:
+        parameters:
           lower_bound: 8  # lower bound (sec) - a_3
           upper_bound: 180  # upper bound (sec) - b_3
