- added additional comments to system config file - removed decorators path (system.yml), as it can be resolved by concat of 'decorators' to service path - removed samplers path (system.yml), as samplers are now under 'helpers' - added path for helpers (system.yml) - moved coreservices and coremods into support-->core folder - added '--local' flag to emews daemon for local mode.  This is useful for debugging locally without having to modify system.yml. - moved node name assignment code fully to Config class - moved python-specific log-conf options out to system.yml, as most of them are not actually used, and should instead be built on the fly in the Config object. - changed signature in importclass module.  IMPORTANT!  update all dependendencies! -Logserver config no longer has logger info in it.  The node which uses the logserver instead will have a node config with logging info that overwrites the system.yml logging. - MAJOR OVERHAUL IN PROGRESS

--- a/pyCORE/src/emews/client/singleserviceclient.yml
+++ b/pyCORE/src/emews/client/singleserviceclient.yml
@@ -1,6 +1,9 @@
 # Configuration file for SingleServiceClient
 # YAML 1.2 compliant
 config:
+  host: localhost  # eMews daemon address
+  port: 32518      # eMews daemon port
+
 dependencies:  # additional classes that this service requires
   client_start_delay:  # Delay to start client connection to eMews daemon.
     class: UniformSampler
