--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -1,69 +1,30 @@
-# Base configuration for the emews system
-# Note, some of the settings can break the system if changed.
+# Global configuration for the eMews system.  It is assumed that all nodes share this configuration
+# file.  To override or add configuration options, use a node configuration file.  For environments
+# in which each node has its own copy of eMews, the node configuration file is not needed, as this
+# file would be unique to each node, instead of global.
 # YAML 1.2 compliant
-general:
-  # Delay to start services from emews daemon invocation.
-  service_start_delay: 300  # in seconds
+general:  # general eMews daemon options
+  # If the node name is null here, then set it either through the command line arg or node config file.
+  node_name: null
+  # Delay (seconds) to start services from eMews daemon invocation.
+  service_start_delay: 300
   # Delay to wait for 'graceful' thread shutdown.  After this wait, continue shut down.
   thread_shutdown_wait: 5  # in seconds (-1 = disable)
 
-paths:
-  # package paths for the emews system
-  emews_pkg_path: emews
-  emews_base_pkg_path: emews.base
-  emews_pkg_services_path: emews.services
-  emews_pkg_service_decorators_path: emews.services.decorators
-  emews_pkg_samplers_path: emews.samplers
+communication:  # communication related eMews daemon options
+  host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
+  port: 32518      # port to use
+  receive_buffer: 128     # buffer for incoming characters from an eMews client
+  command_delimiter: ' '  # delimit commands using this
+  recv_timeout: 20  # in seconds - wait this long for a timeout in expected response
 
-listener:  # emews client listener (emews clients also use this for their own configuration)
-  config:
-    host: localhost  # host to bind to (should be localhost or 127.0.0.1, etc)
-    port: 32518      # port to use
-    receive_buffer: 128     # buffer for incoming characters from a emews client
-    command_delimiter: ' '  # delimit commands using this
-    recv_timeout: 20  # in seconds - wait this long for a timeout in expected response
+logging:  # logging configuration
+  logger: emews.distributed  # send log messages to a designated node across the network
+  message_level: DEBUG  # log messages of this level and above
+  logger_parameters:  # parameters specific to the chosen logger
+    host: 10.0.0.21  # host/IP to send log entries to (designated node)
+    port: 32519  # port on destination host to send log entries to
 
-logging:
-  main_logger: emews.distributed  # the primary logger to use
-  log_conf:
-    version: 1
-    formatters:
-      default:
-        format: '[%(asctime)s] %(nodename)-12.12s | %(threadName)-16.16s [%(levelname)-8.8s | %(module)-16.16s | %(funcName)-16.16s]: %(message)s'
-    handlers:
-      console:
-        class: logging.StreamHandler
-        formatter: default
-        level: DEBUG
-        stream: 'ext://sys.stdout'
-      network:
-        class: logging.handlers.SocketHandler
-        host: 10.0.0.21  # host or IP to send log entries to
-        port: 32519  # port on destination host to send log entries to
-        level: DEBUG
-      file:
-        class: logging.FileHandler
-        filename: emews.log
-        mode: a
-        delay: True
-        formatter: default
-    loggers:
-      root:
-        handlers:
-        - console
-        level: DEBUG
-      emews.base:
-        handlers:
-        - console
-        level: DEBUG  # change this to INFO for production
-        propagate: False
-      emews.distributed:
-        handlers:
-        - network
-        level: DEBUG  # change this to INFO for production
-        propagate: False
-      emews.file:
-        handlers:
-        - file
-        level: DEBUG
-        propagate: False
+startup_services:
+  # Any services which should start immediately can be placed here.  Per node startup services
+  # should be placed in the respective node config file.
