- completed config merging - updated ConfigComponent get to better handle non-dict values - misc bug fixes

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -31,3 +31,6 @@ paths:  # package paths for the emews system
   emews_base_pkg_path: emews.base
   emews_pkg_services_path: emews.services
   emews_pkg_helpers_path: emews.helpers
+
+merge_no_include:  # do not include these sections when merging config files
+  logging: null
