--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -27,4 +27,5 @@ logging:  # logging configuration
 
 startup_services:
   # Any services which should start immediately can be placed here.  Per node startup services
-  # should be placed in the respective node config file.
+  # should be placed in the respective node config file.  # Services which do not need to be started
+  # immediately should be launched using a request client, to minimize initial memory spikes.
