- removed SystemOptions, as no gain over just keeping those options in the config dict. - added 'required_sections' section to conf.yml.  This contains sections which need to be added to the config dict if they are not present after merging. - system_init added function to add required sections. - startup services in SystemManager -- thread_dispatcher object now located in SystemManager - ThreadDispatcher now handles it's own service start delay. - SystemManager added shutdown() method.  Currently only shutting down ThreadDispatcher is present.

--- a/pyCORE/src/emews/base/conf.yml
+++ b/pyCORE/src/emews/base/conf.yml
@@ -34,3 +34,7 @@ paths:  # package paths for the emews system
 
 merge_no_include:  # do not include these sections when merging config files
   logging: null
+
+required_sections: # these sections will be added if not present in any configs
+  general: null
+  startup_services: null
