--- a/pyCORE/src/emews/system.yml
+++ b/pyCORE/src/emews/system.yml
@@ -25,7 +25,8 @@ logging:  # logging configuration
     host: 10.0.0.21  # host/IP to send log entries to (designated node)
     port: 32519  # port on destination host to send log entries to
 
-startup_services:
+startup_services: null
   # Any services which should start immediately can be placed here.  Per node startup services
   # should be placed in the respective node config file.  # Services which do not need to be started
   # immediately should be launched using a request client, to minimize initial memory spikes.
+  # If placing startup services, delete the 'null'.
